<resources>
    <string name="app_name">Application Converter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_lab">Money Converter</string>
    <string name="euro2dinar_lab">Euro---->Dinar</string>
    <string name="dinar2euro_lab">Dinar---->Euro</string>
    <string name="convert_lab">Converter</string>
    <string name="resultat_lab">The result will be displayed here</string>
    <string name="title_activity_convert">Convert</string>
    <string name="quitter_lab">Quitter</string>
    <string name="insert">insert an amount to convert</string>
</resources>