<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConvertActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF9800"
            android:text="@string/title_lab"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHighlight="#E30B0B"
            android:textColorLink="@android:color/black"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/value_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Insert an amount to convert"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/type_conversion_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/euro2dinar_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/euro2dinar_lab"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/dinar2euro_rd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dinar2euro_lab"
                android:textSize="24sp" />
        </RadioGroup>

        <Button
            android:id="@+id/convert_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#FFC107"
            android:backgroundTint="#070809"
            android:text="@string/convert_lab"
            android:textColor="#050404" />

        <TextView
            android:id="@+id/resutlat_conversion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultat_lab"
            android:textAlignment="center"
            android:textColor="#FF9800"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/quitter_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#FFC107"
            android:backgroundTint="#BF1A16"
            android:foregroundGravity="center"
            android:foregroundTint="#8A0E0E"
            android:text="@string/quitter_lab"
            android:textAlignment="center"
            android:textColor="#090808" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>